@@ -151,6 +151,6 @@
 
 @media screen and (min-width: 1200px) {
     .Panel {
-        display: inherit;
+        display: block;
     }
 }
