@@ -21,6 +21,7 @@ collections.
 ### Fixed
 
 - Overall percentage text squashed on small screens.
+- Sidebar to overflow correctly.
 
 ## [1.1.1] - 2023-01-22
 
